--- a/src/css/base/_format.scss
+++ b/src/css/base/_format.scss
@@ -88,6 +88,7 @@ strong, bold {
 }
 mark {
   background-color: $greyDark;
+  color: $white;
   padding: 2px 5px;
 }
 s {
@@ -170,7 +171,7 @@ ol.custom {
     color: $white;
     border: 2px solid lighten($greyMedium, 10%);
     font-family: $headingsFontFamily;
-    font-size: 1.15em; 
+    font-size: 1em; 
     letter-spacing: 1px;
     -webkit-font-smoothing: antialiased;
     &:hover, &:focus {
